# deploy-embeddings

./: .dockerignore  Dockerfile  Dockerfile-grok  Makefile  README.md  pyproject.toml
src/deploy_embeddings/: app.py
