[project]
name = "deploy-embeddings"
# dynamic = ["version"]
version = "0.1.0"
description = "A package to deploy embeddings to as a service"
readme-content-type = "text/markdown"
keywords = [
    "huggingface",
    "embeddings",
    "fastapi",
]
license = {text = "MIT"}
# homepage = "
authors = [
    {name = "pdemeulenaer",email = "pdemeulenaer@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11,<4.0"
dependencies = [
    "python-dotenv>=1.0.1,<2.0.0",
    "huggingface-hub>=0.30.2,<0.31.0",
    "fastapi>=0.104.1,<0.105.0",
    "uvicorn>=0.24.0,<0.25.0",
    "sentence-transformers>=2.2.2,<3.0.0",
    "numpy>=1.26.2,<2.0.0",
]

[tool.poetry]
packages = [{include = "deploy_embeddings", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
