[project]
name = "deploy-embeddings"
# dynamic = ["version"]
version = "0.1.0"
description = "A package to deploy embeddings to as a service"
readme-content-type = "text/markdown"
keywords = [
    "huggingface",
    "embeddings",
    "fastapi",
]
license = {text = "MIT"}
# homepage = "
authors = [
    {name = "pdemeulenaer",email = "pdemeulenaer@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11,<4.0"
dependencies = [
    "torch==2.2.2",
#    "torch>=2.7.0,<3.0.0",  # CPU-only torch 2.7.0 much bigger than 2.2.2 
    "sentence-transformers==3.0.1",
    "numpy>=1.26.2,<2.0.0",
    "fastapi>=0.104.1,<0.105.0", # now >= 0.111.1
    "uvicorn>=0.24.0,<0.25.0",  # now >= 0.30.1
#    "huggingface-hub>=0.30.2,<0.31.0",
#    "python-dotenv>=1.0.1,<2.0.0",  
    "tqdm>=4.67.1", 
]

[[tool.poetry.source]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
priority = "explicit"

[tool.poetry.dependencies."torch"]
source = "pytorch-cpu"

[tool.poetry]
packages = [{include = "deploy_embeddings", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
