[tool.poetry]
name = "deploy-embeddings"
version = "0.1.0"
description = "A package to deploy embeddings to as a service"
authors = ["pdemeulenaer <pdemeulenaer@gmail.com>"]
readme = "README.md"
license = "MIT"
keywords = ["huggingface", "embeddings", "fastapi"]
packages = [{ include = "deploy_embeddings", from = "src" }]
# homepage = "https://example.com"  # Optional

[tool.poetry.dependencies]
python = ">=3.11,<4.0"
torch = { version = "2.2.2", source = "pytorch-cpu" }
# sentence-transformers = "3.0.1"
# sentence-transformers = { version = "3.0.1", extras = ["torch"], optional = false }
transformers = "^4.51.3"
# numpy = ">=1.26.2,<2.0.0"
fastapi = ">=0.104.1,<0.105.0"
uvicorn = ">=0.24.0,<0.25.0"
# tqdm = ">=4.67.1"


[[tool.poetry.source]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
priority = "explicit"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
